--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ru">
 <head>
+    <link rel="stylesheet" type="text/css" th:href="@{/style/AuthStyle.css}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
-        h1 {
-            color: #333;
-        }
-    </style>
+    <title>Авторизация</title>
 </head>
 <body>
-<h1>Hello, World!</h1>
+<div class="container">
+    <h2>Авторизация</h2>
+    <form id="loginForm" method="POST" action="/login">
+        <div class="form-group">
+            <input type="text" name="username" placeholder="Логин" required>
+        </div>
+        <div class="form-group">
+            <input type="password" name="password" placeholder="Пароль" required>
+        </div>
+        <button type="submit">Войти</button>
+        <!--
+        <div class="error-message">
+            <span th:text="${error}"></span>
+        </div>
+        -->
+    </form>
+</div>
 </body>
 </html>
