--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <h2>Авторизация</h2>
     <form id="loginForm" method="POST" action="/login">
         <div class="form-group">
-            <input type="text" name="username" placeholder="Логин" required>
+            <input type="text" name="login" placeholder="Логин" required>
         </div>
         <div class="form-group">
             <input type="password" name="password" placeholder="Пароль" required>
