--- a/src/main/resources/templates/adminSettings.html
+++ b/src/main/resources/templates/adminSettings.html
@@ -41,8 +41,12 @@
             <button id="deleteObjectButton" class="delete">Удалить объект</button>
         </div>
     </div>
+
     <div class="column">
         <div class="header-div">Столбец 3</div>
+        <div class="objectColumnThree" id="objectColumnThree">
+
+        </div>
         <div class="button-container">
             <button id="addObjectButtonС3" class="add">Добавить объект</button>
             <button id="deleteObjectButtonС3" class="delete">Удалить объект</button>
@@ -191,6 +195,7 @@
 </div>
 
 <script src="/scripts/adminSettings/ModuleAddObj.js" defer></script>
+<script src="/scripts/adminSettings/ModuleAddObjColumnThree.js" defer></script>
 <script src="/scripts/adminSettings/Start.js" defer></script>
 <script src="/scripts/adminSettings/ModuleAddEducation.js" defer></script>
 <script src="/scripts/adminSettings/ModuleAddClass.js" defer></script>
