--- a/src/main/resources/templates/profileTeacher.html
+++ b/src/main/resources/templates/profileTeacher.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Профиль</title>
     <link rel="stylesheet" type="text/css" th:href="@{/style/ProfileStyle.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/style/Header.css}">
 </head>
 <body>
 
