--- a/src/main/resources/templates/profileParent.html
+++ b/src/main/resources/templates/profileParent.html
@@ -37,17 +37,8 @@
     </div>
 
     <div class="section">
-        <h2>Классное руководство</h2>
-        <div>
-            <label>Класс:</label>
-            <span id="class"></span>
-        </div>
-        <p><a href="#" class="link" id="classLink">Обзор класса</a></p>
-    </div>
-
-    <div class="section">
-        <h2>Учебные предметы</h2>
-        <p><a href="#" class="link" id="assignmentLink">Просмотр предметов</a></p>
+        <h2>Дети</h2>
+        <p><a href="#" class="link" id="parentSchoolStudentsLink">Обзор детей</a></p>
     </div>
 </div>
 
@@ -56,10 +47,9 @@
     const id = urlParams.get('id');
 
     if (id) {
-        document.getElementById('classLink').href = `classPage?id=${id}`;
-        document.getElementById('assignmentLink').href = `assignmentPage?id=${id}`;
+        document.getElementById('parentSchoolStudentsLink').href = `parentsSchoolStudents?id=${id}`;
 
-        fetch(`findTeacherById?id=${id}`)
+        fetch(`/findParentById?id=${id}`)
             .then(response => {
                 if (!response.ok) {
                     if (response.status === 204) {
@@ -81,26 +71,9 @@
 
                 const initials = `${data.lastName.charAt(0)}${data.firstName.charAt(0)}`;
                 document.getElementById('profile-picture').innerText = initials.toUpperCase();
-
-                return fetch(`http://localhost:8090/findClassByTeacherId?id=${id}`);
-            })
-            .then(response => {
-                if (!response.ok) {
-                    if (response.status === 204) {
-                        throw new Error('Нет данных о классе для данного учителя');
-                    }
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
-            .then(classData => {
-                document.getElementById('class').innerText = classData.name;
             })
             .catch(error => {
-                const classLinkElement = document.getElementById('classLink').parentElement;
-                classLinkElement.remove();
-
-                document.getElementById('class').innerText = 'Нет класса под руководством';
+                console.error('There was a problem with the fetch operation:', error);
             });
     }
 
