--- a/src/main/resources/templates/listParents.html
+++ b/src/main/resources/templates/listParents.html
@@ -207,7 +207,7 @@
 
             const userDiv = document.createElement('div');
             userDiv.className = 'user';
-            userDiv.id = parent.id;
+            userDiv.id = id;
             userDiv.innerHTML = `
                 <h3>${fullName}</h3>
                 <p><strong>Email:</strong> ${parent.email}</p>
