--- a/src/main/resources/templates/profile/profileSchoolStudent.html
+++ b/src/main/resources/templates/profile/profileSchoolStudent.html
@@ -15,7 +15,7 @@
 </header>
 
 <div class="profile-header">
-    <div class="profile-picture" id="profile-picture"></div>
+    <div class="profile-picture" id="profile-picture" onclick="uploadPhoto()"></div>
     <h1 id="fullName"></h1>
 </div>
 
@@ -37,17 +37,18 @@
     </div>
 
     <div class="section">
-        <h2>Классное руководство</h2>
-        <div>
-            <label>Класс:</label>
-            <span id="class"></span>
-        </div>
+        <h2>Дневник</h2>
+        <p><a href="#" class="link" id="diaryLink">Обзор дневника</a></p>
+    </div>
+
+    <div class="section">
+        <h2>Класс</h2>
         <p><a href="#" class="link" id="classLink">Обзор класса</a></p>
     </div>
 
     <div class="section">
-        <h2>Учебные предметы</h2>
-        <p><a href="#" class="link" id="assignmentLink">Просмотр предметов</a></p>
+        <h2>Родители</h2>
+        <p><a href="#" class="link" id="parentLink">Просмотр родителей</a></p>
     </div>
 </div>
 
@@ -56,10 +57,10 @@
     const id = urlParams.get('id');
 
     if (id) {
-        document.getElementById('classLink').href = `classPage?id=${id}`;
-        document.getElementById('assignmentLink').href = `assignmentPage?id=${id}`;
+        document.getElementById('diaryLink').href = `schoolStudentDiary?id=${id}`;
+        document.getElementById('parentLink').href = `parentPage?id=${id}`;
 
-        fetch(`findTeacherById?id=${id}`)
+        fetch(`/findSchoolStudentById?id=${id}`)
             .then(response => {
                 if (!response.ok) {
                     if (response.status === 204) {
@@ -82,25 +83,12 @@
                 const initials = `${data.lastName.charAt(0)}${data.firstName.charAt(0)}`;
                 document.getElementById('profile-picture').innerText = initials.toUpperCase();
 
-                return fetch(`http://localhost:8090/findClassByTeacherId?id=${id}`);
-            })
-            .then(response => {
-                if (!response.ok) {
-                    if (response.status === 204) {
-                        throw new Error('Нет данных о классе для данного учителя');
-                    }
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
-            .then(classData => {
-                document.getElementById('class').innerText = classData.name;
+                const classId = data.classRoom.id;
+                document.getElementById('classLink').href = `classPage?id=${classId}`;
+
             })
             .catch(error => {
-                const classLinkElement = document.getElementById('classLink').parentElement;
-                classLinkElement.remove();
-
-                document.getElementById('class').innerText = 'Нет класса под руководством';
+                console.error('There was a problem with the fetch operation:', error);
             });
     }
 
@@ -116,6 +104,41 @@
         })
         .catch(error => console.error('Ошибка при выходе:', error));
     });
+
+    function uploadPhoto() {
+        const fileInput = document.createElement('input');
+        fileInput.type = 'file';
+        fileInput.accept = 'image/*';
+
+        fileInput.addEventListener('change', function(e) {
+            const file = e.target.files[0];
+            if (file) {
+                const formData = new FormData();
+                formData.append('image', file);
+                formData.append('id', id);
+
+                fetch('/addImageSchoolStudent', {
+                    method: 'POST',
+                    body: formData
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Ошибка при загрузке изображения');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    console.log('Фото успешно загружено', data.message);
+                    //обновить фото
+                })
+                .catch(error => {
+                    console.error('Ошибка:', error);
+                    alert(error.message);
+                });
+            }
+        });
+        fileInput.click();
+    }
 </script>
 
 </body>
