--- a/src/main/resources/templates/profile/profileTeacher.html
+++ b/src/main/resources/templates/profile/profileTeacher.html
@@ -15,7 +15,7 @@
 </header>
 
 <div class="profile-header">
-    <div class="profile-picture" id="profile-picture"></div>
+    <div class="profile-picture" id="profile-picture" onclick="uploadPhoto()"></div>
     <h1 id="fullName"></h1>
 </div>
 
@@ -37,18 +37,17 @@
     </div>
 
     <div class="section">
-        <h2>Дневник</h2>
-        <p><a href="#" class="link" id="diaryLink">Обзор дневника</a></p>
-    </div>
-
-    <div class="section">
-        <h2>Класс</h2>
+        <h2>Классное руководство</h2>
+        <div>
+            <label>Класс:</label>
+            <span id="class"></span>
+        </div>
         <p><a href="#" class="link" id="classLink">Обзор класса</a></p>
     </div>
 
     <div class="section">
-        <h2>Родители</h2>
-        <p><a href="#" class="link" id="parentLink">Просмотр родителей</a></p>
+        <h2>Учебные предметы</h2>
+        <p><a href="#" class="link" id="assignmentLink">Просмотр предметов</a></p>
     </div>
 </div>
 
@@ -57,10 +56,10 @@
     const id = urlParams.get('id');
 
     if (id) {
-        document.getElementById('diaryLink').href = `schoolStudentDiary?id=${id}`;
-        document.getElementById('parentLink').href = `parentPage?id=${id}`;
+        document.getElementById('classLink').href = `classPage?id=${id}`;
+        document.getElementById('assignmentLink').href = `assignmentPage?id=${id}`;
 
-        fetch(`/findSchoolStudentById?id=${id}`)
+        fetch(`findTeacherById?id=${id}`)
             .then(response => {
                 if (!response.ok) {
                     if (response.status === 204) {
@@ -83,12 +82,25 @@
                 const initials = `${data.lastName.charAt(0)}${data.firstName.charAt(0)}`;
                 document.getElementById('profile-picture').innerText = initials.toUpperCase();
 
-                const classId = data.classRoom.id;
-                document.getElementById('classLink').href = `classPage?id=${classId}`;
-
+                return fetch(`http://localhost:8090/findClassByTeacherId?id=${id}`);
+            })
+            .then(response => {
+                if (!response.ok) {
+                    if (response.status === 204) {
+                        throw new Error('Нет данных о классе для данного учителя');
+                    }
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
+            .then(classData => {
+                document.getElementById('class').innerText = classData.name;
             })
             .catch(error => {
-                console.error('There was a problem with the fetch operation:', error);
+                const classLinkElement = document.getElementById('classLink').parentElement;
+                classLinkElement.remove();
+
+                document.getElementById('class').innerText = 'Нет класса под руководством';
             });
     }
 
@@ -104,6 +116,41 @@
         })
         .catch(error => console.error('Ошибка при выходе:', error));
     });
+
+    function uploadPhoto() {
+        const fileInput = document.createElement('input');
+        fileInput.type = 'file';
+        fileInput.accept = 'image/*';
+
+        fileInput.addEventListener('change', function(e) {
+            const file = e.target.files[0];
+            if (file) {
+                const formData = new FormData();
+                formData.append('image', file);
+                formData.append('id', id);
+
+                fetch('/addImageTeacher', {
+                    method: 'POST',
+                    body: formData
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Ошибка при загрузке изображения');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    console.log('Фото успешно загружено', data.message);
+                    //обновить фото
+                })
+                .catch(error => {
+                    console.error('Ошибка:', error);
+                    alert(error.message);
+                });
+            }
+        });
+        fileInput.click();
+    }
 </script>
 
 </body>
